# cpp-project-template

./: .clang-format  CMakeLists.txt
cmake/: CppCheck.cmake  Options.cmake
